--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,6 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
-<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
-
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
 
@@ -16,7 +13,10 @@ layout: default
 <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
+
 <div id="gitalk-container"></div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 <script>
   const gitalk = new Gitalk({
     clientID: 'd48e8b01472c55f16765',
@@ -24,7 +24,7 @@ layout: default
     repo: 'thiswind.github.io',      // The repository of store comments,
     owner: 'thiswind',
     admin: ['thiswind'],
-    id: location.href,      // Ensure uniqueness and length less than 50
+    id: {{ page.title }},      // Ensure uniqueness and length less than 50
     distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
