--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
     repo: 'thiswind.github.io',      // The repository of store comments,
     owner: 'thiswind',
     admin: ['thiswind'],
-    id: {{ page.title }},      // Ensure uniqueness and length less than 50
+    id: location.pathname,      // Ensure uniqueness and length less than 50
     distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
