--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,8 @@ layout: default
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 <script>
   const gitalk = new Gitalk({
-    clientID: 'd48e8b01472c55f16765',
-    clientSecret: '34bdba1a963f22d7378e358dc699a4402e034802',
+    clientID: 'Ov23linCXcCwRNHz8v8I',
+    clientSecret: '37d9884c3dc889dfa4c3106273aa3f178b4636f2',
     repo: 'thiswind.github.io',      // The repository of store comments,
     owner: 'thiswind',
     admin: ['thiswind'],
