--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,8 @@ layout: default
     repo: 'thiswind.github.io',      // The repository of store comments,
     owner: 'thiswind',
     admin: ['thiswind'],
-    id: location.pathname,      // Ensure uniqueness and length less than 50
+    // id: location.pathname,      // Ensure uniqueness and length less than 50
+    id: location.pathname.replace(/[^a-zA-Z0-9_\-\/]/g, ""),  // 简化 id，移除中文和特殊字符
     distractionFreeMode: false  // Facebook-like distraction free mode
   })
 
