--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,9 +7,9 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}"
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
-<!-- RSS feed-->
+<!-- RSS-->
 <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "/feed.xml" | relative_url }}">
 
 <!-- end custom head snippets -->
