--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,15 @@
       </a>
       <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
+      <!-- nav -->
+      {% include nav.html %}
+
       <section id="downloads">
         {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
-        {% endif %}
         <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        {% endif %}
       </section>
     </div>
   </header>
@@ -33,12 +36,15 @@
   <div class="container">
     <section id="main_content">
       {{ content }}
+    </section>
 
+    <footer>
+      <!-- gitalk -->
       {% unless page.url == "/" %}
       <hr>
       {% include gitalk.html %}
       {% endunless %}
-    </section>
+    </footer>
   </div>
 </body>
 
