--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,7 +4,10 @@
 {% include head-custom-theme-colors.html %}
 
 <!-- Setup Google Analytics -->
-{% include head-custom-google-analytics.html %}
+<!-- {% include head-custom-google-analytics.html %} -->
+
+<!-- Setup Plausible Analytics -->
+<script defer data-domain="thiswind.work" src="https://plausible.io/js/script.js"></script>
 
 <!-- You can set your favicon here -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
