--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -13,6 +13,22 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
 <!-- RSS-->
-<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "/feed.xml" | relative_url }}">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ " /feed.xml" | relative_url }}">
+
+<!-- MathJax -->
+<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
+<script type="text/javascript">
+    MathJax = {
+        tex: {
+            inlineMath: [['\\(', '\\)']], // 使用 \( \) 包裹行内公式
+            displayMath: [['\\[', '\\]']] // 使用 \[ \] 包裹块级公式
+        },
+        svg: {
+            fontCache: 'global'
+        }
+    };
+</script>
 
 <!-- end custom head snippets -->
