ADD: link of translator

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,4 +4,6 @@
     <a href="/mygpts/" class="{% if page.url == '/mygpts/' %}active{% endif %}">GPTs</a>
     <span> | </span>
     <a href="/post/about/" class="{% if page.url == '/post/about/' %}active{% endif %}">About</a>
+    <span> | </span>
+    <a href="https://translator.thiswind.work" target="_blank">Translator</a>
 </div>
