更新: 将导航栏中的 Translator 链接改为 Hobe

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,5 +5,5 @@
     <span> | </span>
     <a href="/post/about/" class="{% if page.url == '/post/about/' %}active{% endif %}">About</a>
     <span> | </span>
-    <a href="https://translator.thiswind.work" target="_blank">Translator</a>
+    <a href="https://www.hobe.chat" target="_blank">Hobe</a>
 </div>
